infrastructure/vpc.tf
resource "aws_vpc" "gym_platform_vpc" {
  cidr_block           = "10.0.0.0/16"
  instance_tenancy     = "default"
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name        = "${var.r_prefix}-vpc"
    Environment = var.environment
    Project     = "React Ruby Gym Platform"
  }
}
